[metadata]
name = sqlbind
version = attr: sqlbind.version
author = Anton Bobrov
author_email = baverman+pypi@gmail.com
description = sqlbind allows to bind parameters in text based raw SQL queries
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6

[options.package_data]
sqlbind = py.typed

[options.packages.find]
exclude = tests
